<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    >
    <!--<ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">
    </ImageView>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/one"
            android:textSize="50sp"
            android:layout_marginTop="70dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/loginStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="#ff0000"
            android:textSize="30px"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/phoneRname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="40dp"
            android:hint="@string/name_or_phone_number"
            android:inputType="textPersonName"
            android:padding="7dp"
            android:textColor="@color/purple_700" />

        <EditText
            android:id="@+id/passwordd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="7dp"
            android:textColor="@color/purple_700"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="70sp"/>
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:layout_marginTop="20sp"
            android:layout_marginHorizontal="100sp"
            android:textStyle="bold"
            android:background="@drawable/round_border"/>
        <Button
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="100sp"
            android:textStyle="bold"
            android:background="@drawable/round_border"/>
        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#3D9399"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginTop="10sp"/>
    </LinearLayout>

</RelativeLayout>