<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResDetailsActivity"
    android:background="@color/three">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.11"
            android:id="@+id/imageV"
            android:src="@drawable/res1"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/editext_border"
            android:padding="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textSize="20sp"
                android:textColor="@color/one"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xyz"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/purple_700"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:id="@+id/rlt_address">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/pin"
                android:src="@drawable/pin"/>
            <TextView
                android:id="@+id/addresss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/pin"
                android:text="@string/address"
                android:paddingTop="5dp"
                android:textSize="20sp"
                android:textColor="#808080"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/star1"
                android:src="@drawable/star"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toEndOf="@+id/star1"
                android:id="@+id/star2"
                android:src="@drawable/star"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toEndOf="@+id/star2"
                android:id="@+id/star3"
                android:src="@drawable/star"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toEndOf="@+id/star3"
                android:id="@+id/star4"
                android:src="@drawable/star"
                 android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:visibility="gone"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toEndOf="@+id/star4"
                android:id="@+id/star5"
                android:src="@drawable/star"
                 android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:visibility="gone">
            </ImageView>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:layout_alignParentBottom="true"
        android:layout_margin="50dp"
        android:id="@+id/bookatable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/book_a_table"/>

</RelativeLayout>